<resources>
    <string name="app_name">ExamenAndroidBranchBitApp</string>
    <string name="registro">Registro</string>
    <string name="registrarse">Registrarse</string>
    <string name="registrar_cuenta">¿Aún no tienes una cuenta? Registrate aquí</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="correo">Correo</string>
    <string name="correo_agregar">Correo:</string>
    <string name="contrasenia">Contraseña</string>
    <string name="crear_contrasenia">Contraseña (almenos 6 caracteres)</string>
    <string name="confirmar_contrasenia">Confirmar contraseña</string>
    <string name="toolbar">Toolbar</string>
    <string name="registro_exitoso">Te has registrado correctamente</string>
    <string name="registro_error">Ocurrió un error al registrarse</string>
    <string name="registrando">Registrando..</string>
    <string name="cargando">Cargando..</string>
    <string name="login_error">Error al iniciar sesión, revise sus credenciales</string>
    <string name="error_obtener_employees">Ocurrió un error al obtener el listado de empleados</string>
    <string name="correo_invalido">El correo proporcionado no es válido</string>
    <string name="completar_campo">Complete el campo</string>
    <string name="mis_colaboradores">MIS COLABORADORES</string>
    <string name="agregar_colaborador">AGREGAR COLABORADOR</string>
    <string name="mapa_colaboradores">MAPA DE COLABORADORES</string>
    <string name="inicio">Inicio</string>
    <string name="nombre">Nombre:</string>
    <string name="contacto">Contacto:</string>
    <string name="permisos_explicacion">Los permisos son necesarios para que la App funcione adecuadamente</string>
    <string name="informacion">Información</string>
    <string name="error">Error</string>
    <string name="agregar">Agregar</string>
    <string name="aceptar">Aceptar</string>
    <string name="denegar">Denegar</string>
    <string name="cancelar">cancelar</string>
    <string name="colaboradores">Colaboradores</string>
</resources>