<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/btnColaboradores"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/mis_colaboradores"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline" />

    <Button
        android:id="@+id/btnAgregar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/agregar_colaborador"
        app:layout_constraintEnd_toEndOf="@+id/btnColaboradores"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnColaboradores"
        app:layout_constraintTop_toBottomOf="@+id/btnColaboradores" />

    <Button
        android:id="@+id/btnCerrarSesion"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/cerrar_sesion"
        app:layout_constraintEnd_toEndOf="@+id/btnAgregar"
        app:layout_constraintStart_toStartOf="@+id/btnAgregar"
        app:layout_constraintTop_toBottomOf="@+id/btnAgregar" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3"
        />


</androidx.constraintlayout.widget.ConstraintLayout>